--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.7.0",
     "gh-pages": "^6.3.0",
+    "globals": "^17.0.0",
+    "prettier": "^3.8.0",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.53.0",
     "vite": "^7.2.4",
     "vue-tsc": "^3.1.4"
   }
