--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "p-limit": "^7.2.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
